rnsc/test_data/rns_integration/error/parser/inner_directive/missing_operand.rns
; Tests that missing operand after .inner is detected and reported.
; Expected error: E-020 (missing implicit type hint operand)

.class public MyClass
.super java/lang/Object

.inner
    .super java/lang/Object

.inner_end

.class_end
